css/main.css
body {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    background-color: #2e2e2e;
}

/* GLOBAL */
svg {
    fill: #999;
}
button {
    width: 15vmin;
    height: 15vmin;
    min-width: 150px;
    max-width: 300px;
    min-height: 150px;
    max-height: 300px;
    background: none;
    border: none;
    margin: 5vmin;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-wrap: nowrap;
    color: #999;
}
span {
    margin: 0.5vmin;
    width: max-content;
    height: max-content;
}
/* //GLOBAL// */

/* BASIC LAYOUT*/
.wrapper-drives {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: row;
    flex-wrap: wrap;
}
.wrapper-format {
   
  
    width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

#format-all {
    width: 15vmin;
    height: 15vmin;
    min-width: 200px;
    max-width: 350px;
    min-height: 200px;
    max-height: 350px;
    cursor: pointer;
    transition: all .1s ease-in-out;
    -webkit-transition: all .1s ease-in-out;
    -moz-transition: all .1s ease-in-out;
    -ms-transition: all .1s ease-in-out;
    -o-transition: all .1s ease-in-out;
}
#format-all:hover {
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -o-transform: scale(1.1);
    transition: all .1s ease-in-out;
    -webkit-transition: all .1s ease-in-out;
    -moz-transition: all .1s ease-in-out;
    -ms-transition: all .1s ease-in-out;
    -o-transition: all .1s ease-in-out;
}

